--- a/index.html
+++ b/index.html
@@ -28,36 +28,57 @@
           <a href="./index.html" class="logo page-header__logo link"
             ><span class="logo__accent">Web</span>Studio</a
           >
-          <ul class="list nav-list">
-            <li class="nav-list__item">
-              <a href="./index.html" class="navigation__link link navigation__link--current"
-                >Студія</a
-              >
-            </li>
-            <li class="nav-list__item">
-              <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
-            </li>
-            <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
-          </ul>
+          <button
+            class="navigation__toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="navigation__open" width="40" height="40">
+              <use href="./images/symbol-defs.svg#close-icon"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu js-menu-container" id="mobile-menu">
+            <button class="navigation__toggle js-close-menu">
+              <svg class="navigation__open" width="40" height="40">
+                <use href="./images/symbol-defs.svg#close-icon"></use>
+              </svg>
+            </button>
+
+            <ul class="list nav-list">
+              <li class="nav-list__item">
+                <a href="./index.html" class="navigation__link link navigation__link--current"
+                  >Студія</a
+                >
+              </li>
+              <li class="nav-list__item">
+                <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
+              </li>
+              <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
+            </ul>
+
+            <ul class="list contact-list">
+              <li class="contact-list__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="navigation__link contact-list__link link"
+                >
+                  <svg class="contact-list__icon" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#email-icon"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contact-list__item">
+                <a href="tel:+380961111111" class="navigation__link contact-list__link link">
+                  <svg class="contact-list__icon" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#tel-icon"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
         </nav>
-        <ul class="list contact-list">
-          <li class="contact-list__item">
-            <a href="mailto:info@devstudio.com" class="navigation__link contact-list__link link">
-              <svg class="contact-list__icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#email-icon"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="contact-list__item">
-            <a href="tel:+380961111111" class="navigation__link contact-list__link link">
-              <svg class="contact-list__icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#tel-icon"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
     <main>
@@ -119,7 +140,7 @@
         </ul>
       </section>
       <!-- Work -->
-      <section class="section section--no-padding">
+      <section class="section work-section section--no-padding">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list work-list">
@@ -517,5 +538,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
