Add main page and modal

--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
           <ul class="list team-list">
             <li class="team-list__item">
               <img
+                srcset="./images/team/img-team-mob-1.jpg"
                 class="team-list__image"
-                src="./images/img-team-1.jpg"
-                alt="Ігор Дем'яненк фото"
-                width="270"
-                height="260"
+                src="./images/team/img-team-mob-1.jpg"
+                alt="Ігор Дем'яненко фото"
+                sizes=""
               />
               <h3 class="team-list__name">Ігор Дем'яненко</h3>
               <p lang="en" class="team-list__position">Product Designer</p>
@@ -225,11 +225,11 @@
             </li>
             <li class="team-list__item">
               <img
+                srcset="./images/team/img-team-mob-2.jpg"
                 class="team-list__image"
-                src="./images/img-team-2.jpg"
-                alt="Ольга Рєпіна фото"
-                width="270"
-                height="260"
+                src="./images/team/img-team-mob-2.jpg"
+                alt="Ольга Репіна фото"
+                sizes=""
               />
               <h3 class="team-list__name">Ольга Рєпіна</h3>
               <p lang="en" class="team-list__position">Frontend Developer</p>
@@ -266,11 +266,11 @@
             </li>
             <li class="team-list__item">
               <img
+                srcset="./images/team/img-team-mob-3.jpg"
                 class="team-list__image"
-                src="./images/img-team-3.jpg"
+                src="./images/team/img-team-mob-3.jpg"
                 alt="Микола Тарасов фото"
-                width="270"
-                height="260"
+                sizes=""
               />
               <h3 class="team-list__name">Микола Тарасов</h3>
               <p lang="en" class="team-list__position">Marketing</p>
@@ -307,11 +307,11 @@
             </li>
             <li class="team-list__item">
               <img
+                srcset="./images/team/img-team-mob-4.jpg"
                 class="team-list__image"
-                src="./images/img-team-4.jpg"
+                src="./images/team/img-team-mob-4.jpg"
                 alt="Михайло Єрмаков фото"
-                width="270"
-                height="260"
+                sizes=""
               />
               <h3 class="team-list__name">Михайло Єрмаков</h3>
               <p lang="en" class="team-list__position">UI Designer</p>
