--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             aria-expanded="false"
             aria-controls="mobile-menu"
           >
-            <svg class="navigation__open" width="40" height="40">
+            <svg class="navigation__icon" width="40" height="40">
               <use href="./images/symbol-defs.svg#close-icon"></use>
             </svg>
           </button>
           <div class="mobile-menu js-menu-container" id="mobile-menu">
             <button class="navigation__toggle js-close-menu">
-              <svg class="navigation__open" width="40" height="40">
+              <svg class="navigation__icon" width="40" height="40">
                 <use href="./images/symbol-defs.svg#close-icon"></use>
               </svg>
             </button>
@@ -68,13 +68,27 @@
                   info@devstudio.com
                 </a>
               </li>
-              <li class="contact-list__item">
-                <a href="tel:+380961111111" class="navigation__link contact-list__link link">
+              <li class="contact-list__item accent">
+                <a href="tel:+380961111111" class="navigation__link contact-list__link link accent">
                   <svg class="contact-list__icon" width="10" height="16">
                     <use href="./images/symbol-defs.svg#tel-icon"></use>
                   </svg>
                   +38 096 111 11 11</a
                 >
+              </li>
+            </ul>
+            <ul class="social-mobile list">
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">Instagram</a>
+              </li>
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">Twitter</a>
+              </li>
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">Facebook</a>
+              </li>
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">LinkedIn</a>
               </li>
             </ul>
           </div>
