--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container page-footer__container">
-        <div class="adress-container">
+        <div class="address-container">
           <a href="./index.html" class="logo page-footer__logo link"
             ><span class="logo__accent">Web</span>Studio</a
           >
