Portfolio page mob

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             aria-controls="mobile-menu"
           >
             <svg class="navigation__icon" width="40" height="40">
-              <use href="./images/symbol-defs.svg#close-icon"></use>
+              <use href="./images/symbol-defs.svg#menu-icon"></use>
             </svg>
           </button>
           <div class="mobile-menu js-menu-container" id="mobile-menu">
