--- a/portfolio.html
+++ b/portfolio.html
@@ -28,36 +28,71 @@
           <a href="./index.html" class="logo page-header__logo link"
             ><span class="logo__accent">Web</span>Studio</a
           >
-          <ul class="list nav-list">
-            <li class="nav-list__item">
-              <a href="./index.html" class="navigation__link link">Студія</a>
-            </li>
-            <li class="nav-list__item">
-              <a href="./portfolio.html" class="navigation__link link navigation__link--current"
-                >Портфоліо</a
-              >
-            </li>
-            <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
-          </ul>
+          <button
+            class="navigation__toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="navigation__icon" width="40" height="40">
+              <use href="./images/symbol-defs.svg#menu-icon"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu js-menu-container" id="mobile-menu">
+            <button class="navigation__toggle js-close-menu">
+              <svg class="navigation__icon" width="40" height="40">
+                <use href="./images/symbol-defs.svg#close-icon"></use>
+              </svg>
+            </button>
+
+            <ul class="list nav-list">
+              <li class="nav-list__item">
+                <a href="./index.html" class="navigation__link link navigation__link">Студія</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="./portfolio.html" class="navigation__link link navigation__link--current"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
+            </ul>
+
+            <ul class="list contact-list">
+              <li class="contact-list__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="navigation__link contact-list__link link"
+                >
+                  <svg class="contact-list__icon" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#email-icon"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contact-list__item accent">
+                <a href="tel:+380961111111" class="navigation__link contact-list__link link accent">
+                  <svg class="contact-list__icon" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#tel-icon"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+            <ul class="social-mobile list">
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">Instagram</a>
+              </li>
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">Twitter</a>
+              </li>
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">Facebook</a>
+              </li>
+              <li class="social-mobile__item">
+                <a href="" class="socila-mobile__link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </nav>
-        <ul class="list contact-list">
-          <li class="contact-list__item">
-            <a href="mailto:info@devstudio.com" class="navigation__link contact-list__link link">
-              <svg class="contact-list__icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#email-icon"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="contact-list__item">
-            <a href="tel:+380961111111" class="navigation__link contact-list__link link">
-              <svg class="contact-list__icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#tel-icon"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
     <main>
@@ -87,11 +122,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-1.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-1.jpg"
+                    src="./images/portfolio/img-portfolio-mob-1.jpg"
                     alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -109,11 +144,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-2.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-2.jpg"
+                    src="./images/portfolio/img-portfolio-mob-2.jpg"
                     alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -133,11 +168,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-3.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-3.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-3.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -155,11 +190,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-4.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-4.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-4.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -177,11 +212,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-5.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-5.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-5.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -199,11 +234,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-6.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-6.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-6.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -221,11 +256,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-7.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-7.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-7.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -243,11 +278,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-8.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-8.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-8.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -265,11 +300,11 @@
               <a href="" class="link">
                 <div class="card__wrap">
                   <img
+                    srcset="./images/portfolio/img-portfolio-mob-9.jpg"
                     class="card__image"
-                    src="./images/img-portfolio-9.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    width="370"
-                    height="294"
+                    src="./images/portfolio/img-portfolio-mob-9.jpg"
+                    alt="Ігор Дем'яненко фото"
+                    sizes=""
                   />
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -290,7 +325,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container page-footer__container">
-        <div class="adress-container">
+        <div class="address-container">
           <a href="./index.html" class="logo page-footer__logo link"
             ><span class="logo__accent">Web</span>Studio</a
           >
