--- a/index.html
+++ b/index.html
@@ -37,6 +37,41 @@
               <use href="./images/symbol-defs.svg#menu-icon"></use>
             </svg>
           </button>
+          <div class="menu">
+            <ul class="list nav-list">
+              <li class="nav-list__item">
+                <a href="./index.html" class="navigation__link link navigation__link--current"
+                  >Студія</a
+                >
+              </li>
+              <li class="nav-list__item">
+                <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
+              </li>
+              <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
+            </ul>
+
+            <ul class="list contact-list">
+              <li class="contact-list__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="navigation__link contact-list__link link"
+                >
+                  <svg class="contact-list__icon" width="14" height="10">
+                    <use href="./images/symbol-defs.svg#email-icon"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contact-list__item">
+                <a href="tel:+380961111111" class="navigation__link contact-list__link link accent">
+                  <svg class="contact-list__icon" width="10" height="14">
+                    <use href="./images/symbol-defs.svg#tel-icon"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
           <div class="mobile-menu js-menu-container" id="mobile-menu">
             <button class="navigation__toggle js-close-menu">
               <svg class="navigation__icon" width="40" height="40">
@@ -105,53 +140,55 @@
       </section>
       <!-- Features -->
       <section class="section">
-        <h2 class="visually-hidden">Особливості</h2>
-        <ul class="list container features-list">
-          <li class="features-list__item">
-            <div class="features-list__thumb">
-              <svg class="features-list__icon" width="70" height="70">
-                <use href="./images/symbol-defs.svg#features-image-1"></use>
-              </svg>
-            </div>
-            <h3 class="features-list__title">Увага до деталей</h3>
-            <p class="features-list__text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li class="features-list__item">
-            <div class="features-list__thumb">
-              <svg class="features-list__icon" width="70" height="70">
-                <use href="./images/symbol-defs.svg#features-image-2"></use>
-              </svg>
-            </div>
-            <h3 class="features-list__title">Пунктуальність</h3>
-            <p class="features-list__text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li class="features-list__item">
-            <div class="features-list__thumb">
-              <svg class="features-list__icon" width="70" height="70">
-                <use href="./images/symbol-defs.svg#features-image-3"></use>
-              </svg>
-            </div>
-            <h3 class="features-list__title">Планування</h3>
-            <p class="features-list__text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="features-list__item">
-            <div class="features-list__thumb">
-              <svg class="features-list__icon" width="70" height="70">
-                <use href="./images/symbol-defs.svg#features-image-4"></use>
-              </svg>
-            </div>
-            <h3 class="features-list__title">Сучасні технології</h3>
-            <p class="features-list__text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Особливості</h2>
+          <ul class="list features-list">
+            <li class="features-list__item">
+              <div class="features-list__thumb">
+                <svg class="features-list__icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#features-image-1"></use>
+                </svg>
+              </div>
+              <h3 class="features-list__title">Увага до деталей</h3>
+              <p class="features-list__text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="features-list__item">
+              <div class="features-list__thumb">
+                <svg class="features-list__icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#features-image-2"></use>
+                </svg>
+              </div>
+              <h3 class="features-list__title">Пунктуальність</h3>
+              <p class="features-list__text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="features-list__item">
+              <div class="features-list__thumb">
+                <svg class="features-list__icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#features-image-3"></use>
+                </svg>
+              </div>
+              <h3 class="features-list__title">Планування</h3>
+              <p class="features-list__text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="features-list__item">
+              <div class="features-list__thumb">
+                <svg class="features-list__icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#features-image-4"></use>
+                </svg>
+              </div>
+              <h3 class="features-list__title">Сучасні технології</h3>
+              <p class="features-list__text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Work -->
       <section class="section work-section section--no-padding">
@@ -159,13 +196,7 @@
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list work-list">
             <li class="work-list__item">
-              <img
-                class="work-list__image"
-                src="./images/img-list-1.jpg"
-                alt="Написання коду"
-                width="370"
-                height="294"
-              />
+              <img class="work-list__image" src="" alt="Написання коду" width="370" height="294" />
               <p class="work-list__descr">Десктопні додатки</p>
             </li>
             <li class="work-list__item">
@@ -197,13 +228,18 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="list team-list">
             <li class="team-list__item">
-              <img
-                srcset="./images/team/img-team-mob-1.jpg"
-                class="team-list__image"
-                src="./images/team/img-team-mob-1.jpg"
-                alt="Ігор Дем'яненко фото"
-                sizes=""
-              />
+              <picture>
+                <source srcset="" media="(min-width: 1200px)" />
+
+                <source srcset="./images/team/img-team-tab-1.jpg" media="(min-width: 768px)" />
+
+                <source srcset="./images/team/img-team-mob-1.jpg 1x" media="(max-width: 767px)" />
+                <img
+                  class="team-list__image"
+                  src="./images/team/img-team-mob-1.jpg"
+                  alt="Ігор Дем'яненко фото"
+                />
+              </picture>
               <h3 class="team-list__name">Ігор Дем'яненко</h3>
               <p lang="en" class="team-list__position">Product Designer</p>
               <ul class="list social-list">
@@ -238,13 +274,18 @@
               </ul>
             </li>
             <li class="team-list__item">
-              <img
-                srcset="./images/team/img-team-mob-2.jpg"
-                class="team-list__image"
-                src="./images/team/img-team-mob-2.jpg"
-                alt="Ольга Репіна фото"
-                sizes=""
-              />
+              <picture>
+                <source srcset="" media="(min-width: 1200px)" />
+
+                <source srcset="./images/team/img-team-tab-2.jpg 1x" media="(min-width: 768px)" />
+
+                <source srcset="./images/team/img-team-mob-2.jpg 1x" media="(min-width: 480px)" />
+                <img
+                  class="team-list__image"
+                  src="./images/team/img-team-mob-2.jpg"
+                  alt="Ольга Репіна фото"
+                />
+              </picture>
               <h3 class="team-list__name">Ольга Рєпіна</h3>
               <p lang="en" class="team-list__position">Frontend Developer</p>
               <ul class="list social-list">
@@ -279,13 +320,18 @@
               </ul>
             </li>
             <li class="team-list__item">
-              <img
-                srcset="./images/team/img-team-mob-3.jpg"
-                class="team-list__image"
-                src="./images/team/img-team-mob-3.jpg"
-                alt="Микола Тарасов фото"
-                sizes=""
-              />
+              <picture>
+                <source srcset="" media="(min-width: 1200px)" />
+
+                <source srcset="./images/team/img-team-tab-3.jpg" media="(min-width: 768px)" />
+
+                <source srcset="./images/team/img-team-mob-3.jpg 1x" media="(min-width: 480px)" />
+                <img
+                  class="team-list__image"
+                  src="./images/team/img-team-mob-3.jpg"
+                  alt="Микола Тарасов фото"
+                />
+              </picture>
               <h3 class="team-list__name">Микола Тарасов</h3>
               <p lang="en" class="team-list__position">Marketing</p>
               <ul class="list social-list">
@@ -320,13 +366,18 @@
               </ul>
             </li>
             <li class="team-list__item">
-              <img
-                srcset="./images/team/img-team-mob-4.jpg"
-                class="team-list__image"
-                src="./images/team/img-team-mob-4.jpg"
-                alt="Михайло Єрмаков фото"
-                sizes=""
-              />
+              <picture>
+                <source srcset="" media="(min-width: 1200px)" />
+
+                <source srcset="./images/team/img-team-tab-4.jpg 1x" media="(min-width: 768px)" />
+
+                <source srcset="./images/team/img-team-mob-4.jpg 1x" media="(min-width: 480px)" />
+                <img
+                  class="team-list__image"
+                  src="./images/team/img-team-mob-4.jpg"
+                  alt="Михайло Єрмаков фото"
+                />
+              </picture>
               <h3 class="team-list__name">Михайло Єрмаков</h3>
               <p lang="en" class="team-list__position">UI Designer</p>
               <ul class="list social-list">
@@ -417,71 +468,76 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container page-footer__container">
-        <div class="address-container">
-          <a href="./index.html" class="logo page-footer__logo link"
-            ><span class="logo__accent">Web</span>Studio</a
-          >
-          <address>
-            <ul class="list address-list">
-              <li class="address-list__item">
-                <a
-                  href="https://goo.gl/maps/oFrESirGFiArBrEv5"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="address-list__link link"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+        <div class="address-wrap">
+          <div class="address-container">
+            <a href="./index.html" class="logo page-footer__logo link"
+              ><span class="logo__accent">Web</span>Studio</a
+            >
+
+            <address>
+              <ul class="list address-list">
+                <li class="address-list__item">
+                  <a
+                    href="https://goo.gl/maps/oFrESirGFiArBrEv5"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="address-list__link link"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="address-list__item">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="link address-list__link address-list__link--contact"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address-list__item">
+                  <a
+                    href="tel:+380961111111"
+                    class="link address-list__link address-list__link--contact"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="join-container">
+            <strong class="footer__join-text">Приєднуйтесь</strong>
+            <ul class="list social-list join-container__list">
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-list__item">
-                <a
-                  href="mailto:info@devstudio.com"
-                  class="link address-list__link address-list__link--contact"
-                  >info@devstudio.com</a
-                >
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-list__item">
-                <a
-                  href="tel:+380961111111"
-                  class="link address-list__link address-list__link--contact"
-                  >+38 096 111 11 11</a
-                >
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-        <div class="join-container">
-          <strong class="footer__join-text">Приєднуйтесь</strong>
-          <ul class="list social-list join-container__list">
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+
         <div class="form-container">
           <strong class="footer__join-text">Підпишіться на розсилку</strong>
           <form action="" class="form-join">
