Main page tablet

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                   href="mailto:info@devstudio.com"
                   class="navigation__link contact-list__link link"
                 >
-                  <svg class="contact-list__icon" width="14" height="10">
+                  <svg class="contact-list__icon email" width="14" height="10">
                     <use href="./images/symbol-defs.svg#email-icon"></use>
                   </svg>
                   info@devstudio.com
                 </a>
               </li>
               <li class="contact-list__item">
-                <a href="tel:+380961111111" class="navigation__link contact-list__link link accent">
-                  <svg class="contact-list__icon" width="10" height="14">
+                <a href="tel:+380961111111" class="navigation__link contact-list__link link">
+                  <svg class="contact-list__icon tel" width="10" height="14">
                     <use href="./images/symbol-defs.svg#tel-icon"></use>
                   </svg>
                   +38 096 111 11 11</a
