--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,41 @@
               <use href="./images/symbol-defs.svg#menu-icon"></use>
             </svg>
           </button>
+          <div class="menu">
+            <ul class="list nav-list">
+              <li class="nav-list__item">
+                <a href="./index.html" class="navigation__link link">Студія</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="./portfolio.html" class="navigation__link link navigation__link--current"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
+            </ul>
+
+            <ul class="list contact-list">
+              <li class="contact-list__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="navigation__link contact-list__link link"
+                >
+                  <svg class="contact-list__icon" width="14" height="10">
+                    <use href="./images/symbol-defs.svg#email-icon"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contact-list__item">
+                <a href="tel:+380961111111" class="navigation__link contact-list__link link accent">
+                  <svg class="contact-list__icon" width="10" height="14">
+                    <use href="./images/symbol-defs.svg#tel-icon"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
           <div class="mobile-menu js-menu-container" id="mobile-menu">
             <button class="navigation__toggle js-close-menu">
               <svg class="navigation__icon" width="40" height="40">
@@ -46,12 +81,12 @@
 
             <ul class="list nav-list">
               <li class="nav-list__item">
-                <a href="./index.html" class="navigation__link link navigation__link">Студія</a>
+                <a href="./index.html" class="navigation__link link navigation__link--current"
+                  >Студія</a
+                >
               </li>
               <li class="nav-list__item">
-                <a href="./portfolio.html" class="navigation__link link navigation__link--current"
-                  >Портфоліо</a
-                >
+                <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
               </li>
               <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
             </ul>
@@ -325,71 +360,76 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container page-footer__container">
-        <div class="address-container">
-          <a href="./index.html" class="logo page-footer__logo link"
-            ><span class="logo__accent">Web</span>Studio</a
-          >
-          <address>
-            <ul class="list address-list">
-              <li class="address-list__item">
-                <a
-                  href="https://goo.gl/maps/oFrESirGFiArBrEv5"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="address-list__link link"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+        <div class="address-wrap">
+          <div class="address-container">
+            <a href="./index.html" class="logo page-footer__logo link"
+              ><span class="logo__accent">Web</span>Studio</a
+            >
+
+            <address>
+              <ul class="list address-list">
+                <li class="address-list__item">
+                  <a
+                    href="https://goo.gl/maps/oFrESirGFiArBrEv5"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="address-list__link link"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="address-list__item">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="link address-list__link address-list__link--contact"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address-list__item">
+                  <a
+                    href="tel:+380961111111"
+                    class="link address-list__link address-list__link--contact"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="join-container">
+            <strong class="footer__join-text">Приєднуйтесь</strong>
+            <ul class="list social-list join-container__list">
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-list__item">
-                <a
-                  href="mailto:info@devstudio.com"
-                  class="link address-list__link address-list__link--contact"
-                  >info@devstudio.com</a
-                >
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-list__item">
-                <a
-                  href="tel:+380961111111"
-                  class="link address-list__link address-list__link--contact"
-                  >+38 096 111 11 11</a
-                >
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a class="social-list__link join-container__link" href=""
+                  ><svg class="social-list__icon join-container__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-        <div class="join-container">
-          <strong class="footer__join-text">Приєднуйтесь</strong>
-          <ul class="list social-list join-container__list">
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link join-container__link" href=""
-                ><svg class="social-list__icon join-container__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+
         <div class="form-container">
           <strong class="footer__join-text">Підпишіться на розсилку</strong>
           <form action="" class="form-join">
