--- a/portfolio.html
+++ b/portfolio.html
@@ -81,12 +81,12 @@
 
             <ul class="list nav-list">
               <li class="nav-list__item">
-                <a href="./index.html" class="navigation__link link navigation__link--current"
-                  >Студія</a
-                >
+                <a href="./index.html" class="navigation__link link">Студія</a>
               </li>
               <li class="nav-list__item">
-                <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
+                <a href="./portfolio.html" class="navigation__link link navigation__link--current"
+                  >Портфоліо</a
+                >
               </li>
               <li class="nav-list__item"><a href="" class="navigation__link link">Контакти</a></li>
             </ul>
