--- a/index.html
+++ b/index.html
@@ -196,7 +196,13 @@
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list work-list">
             <li class="work-list__item">
-              <img class="work-list__image" src="" alt="Написання коду" width="370" height="294" />
+              <img
+                class="work-list__image"
+                src="./images/img-list-1.jpg"
+                alt="Мобільні додатки"
+                width="370"
+                height="294"
+              />
               <p class="work-list__descr">Десктопні додатки</p>
             </li>
             <li class="work-list__item">
@@ -229,11 +235,29 @@
           <ul class="list team-list">
             <li class="team-list__item">
               <picture>
-                <source srcset="" media="(min-width: 1200px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-desk-1.jpg    1x,
+                    ./images/team/img-team-desk-1-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
 
-                <source srcset="./images/team/img-team-tab-1.jpg" media="(min-width: 768px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-tab-1.jpg    1x,
+                    ./images/team/img-team-tab-1-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
 
-                <source srcset="./images/team/img-team-mob-1.jpg 1x" media="(max-width: 767px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-mob-1.jpg    1x,
+                    ./images/team/img-team-mob-1-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
                 <img
                   class="team-list__image"
                   src="./images/team/img-team-mob-1.jpg"
@@ -275,11 +299,29 @@
             </li>
             <li class="team-list__item">
               <picture>
-                <source srcset="" media="(min-width: 1200px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-desk-2.jpg    1x,
+                    ./images/team/img-team-desk-2-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
 
-                <source srcset="./images/team/img-team-tab-2.jpg 1x" media="(min-width: 768px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-tab-2.jpg    1x,
+                    ./images/team/img-team-tab-2-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
 
-                <source srcset="./images/team/img-team-mob-2.jpg 1x" media="(min-width: 480px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-mob-2.jpg    1x,
+                    ./images/team/img-team-mob-2-2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
                 <img
                   class="team-list__image"
                   src="./images/team/img-team-mob-2.jpg"
@@ -321,11 +363,29 @@
             </li>
             <li class="team-list__item">
               <picture>
-                <source srcset="" media="(min-width: 1200px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-desk-3.jpg    1x,
+                    ./images/team/img-team-desk-3-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
 
-                <source srcset="./images/team/img-team-tab-3.jpg" media="(min-width: 768px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-tab-3.jpg    1x,
+                    ./images/team/img-team-tab-3-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
 
-                <source srcset="./images/team/img-team-mob-3.jpg 1x" media="(min-width: 480px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-mob-3.jpg    1x,
+                    ./images/team/img-team-mob-3-2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
                 <img
                   class="team-list__image"
                   src="./images/team/img-team-mob-3.jpg"
@@ -367,11 +427,29 @@
             </li>
             <li class="team-list__item">
               <picture>
-                <source srcset="" media="(min-width: 1200px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-desk-4.jpg    1x,
+                    ./images/team/img-team-desk-4-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
 
-                <source srcset="./images/team/img-team-tab-4.jpg 1x" media="(min-width: 768px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-tab-4.jpg    1x,
+                    ./images/team/img-team-tab-4-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
 
-                <source srcset="./images/team/img-team-mob-4.jpg 1x" media="(min-width: 480px)" />
+                <source
+                  srcset="
+                    ./images/team/img-team-mob-4.jpg    1x,
+                    ./images/team/img-team-mob-4-2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
                 <img
                   class="team-list__image"
                   src="./images/team/img-team-mob-4.jpg"
