--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Header -->
     <header class="page-header">
-      <div class="container container-centered">
+      <div class="container">
         <nav class="navigation">
           <a href="./index.html" class="logo page-header__logo link"
             ><span class="logo__accent">Web</span>Studio</a
